# CustomADS

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
Heap/Compare/: Compare.cpp  Compare.h
Heap/Heap/: Heap.cpp  Heap.h
Map/: Map.h
MinMaxQueue/ExcThrowClass/: ExcThrowClass.h
MinMaxQueue/MinMaxNode/: MinMaxNode.h
MinMaxQueue/Queue/: Queue.h
MinMaxQueue/Stack/: Stack.h
Queue/: Queue.h
algorithms/sieve_of_eratosthenes/: sieve_of_eratosthenes.cpp  sieve_of_eratosthenes.hpp
data_structures/heap/compare/: compare.cpp  compare.hpp
data_structures/heap/heap/: heap.cpp  heap.hpp
data_structures/map/: map.hpp
data_structures/min_max_queue/: exc_throw_class.hpp  min_max_node.hpp  queue.hpp  stack.hpp
data_structures/queue/: queue.hpp
data_structures/simple_segment_tree/: simple_segment_tree.hpp
src/: CMakeLists.txt
src/algorithms/: CMakeLists.txt
src/algorithms/euclidean/: CMakeLists.txt  README.md  euclidean.cpp  euclidean.hpp
src/algorithms/kmp/: CMakeLists.txt  README.md  kmp.cpp  kmp.hpp
src/algorithms/sieve_of_eratosthenes/: CMakeLists.txt  README.md  sieve_of_eratosthenes.cpp  sieve_of_eratosthenes.hpp
src/data_structures/aho_corasick_automata/: aho_corasick_automata.hpp
src/data_structures/heap/compare/: compare.cpp  compare.hpp
src/data_structures/heap/heap/: heap.cpp  heap.hpp
src/data_structures/map/: map.hpp
src/data_structures/min_max_queue/: exc_throw_class.hpp  min_max_node.hpp  queue.hpp  stack.hpp
src/data_structures/queue/: queue.hpp
src/data_structures/segment_tree/: segment_tree.hpp
unittests/: CMakeLists.txt  expect_equality.hpp
unittests/algorithms/: CMakeLists.txt
unittests/algorithms/euclidean/: test_euclidean.cpp
unittests/algorithms/kmp/: test_kmp.cpp
unittests/algorithms/sieve_of_eratosthenes/: test_sieve_of_eratosthenes.cpp
unittests/data_structures/: CMakeLists.txt
unittests/data_structures/aho_corasick_automata/: test_aho_corasick_automata.cpp
unittests/data_structures/segment_tree/: test_segment_tree.cpp
